# log-analysis

./: .eslintrc.json  next.config.js  package-lock.json  package.json
log_analysis/: readme.md  simple_consumer.py  simple_producer.py
log_analysis_web_backend/: CMakeLists.txt  configuration.yaml  configuration_vars.yaml  readme.md
log_analysis_web_backend/cmake/: CPM.cmake  PrepareDependencies.cmake  PrepareDrogon.cmake  PrepareJsonCpp.cmake  PrepareNlohmannJson.cmake  PreparePostgreSql.cmake  PreparePqxx.cmake  PrepareSeasocks.cmake  PrepareUserver.cmake
log_analysis_web_backend/log_analysis/: CMakeLists.txt
log_analysis_web_backend/log_analysis/controllers/: CMakeLists.txt
log_analysis_web_backend/log_analysis/controllers/include/controllers/: controller_base.h
log_analysis_web_backend/log_analysis/controllers/src/anomaly_logs/: get.cpp  update_cluster_id.cpp
log_analysis_web_backend/log_analysis/controllers/src/logs_clusters/: create.cpp  get.cpp
log_analysis_web_backend/log_analysis/controllers/src/statistics/: get.cpp
log_analysis_web_backend/log_analysis/data_models/: CMakeLists.txt
log_analysis_web_backend/log_analysis/data_models/include/data_models/: anomaly_logs.h  logs_clusters.h  statistics.h
log_analysis_web_backend/log_analysis/data_models/src/: anomaly_logs.cpp  logs_clusters.cpp  statistics.cpp
log_analysis_web_backend/log_analysis/json/: CMakeLists.txt
log_analysis_web_backend/log_analysis/server/: CMakeLists.txt
log_analysis_web_backend/log_analysis/server/src/: main.cpp
log_analysis_web_backend/log_analysis/server/src/details/: controller_wrapper.h  details.cpp  details.h  fields.h  storage_wrapper.cpp  storage_wrapper.h  traits.h
log_analysis_web_backend/log_analysis/storage/: CMakeLists.txt
log_analysis_web_backend/log_analysis/storage/include/storage/: storage.h  transaction.h
log_analysis_web_backend/log_analysis/storage/src/: storage.cpp  transaction.cpp
log_analysis_web_backend/log_analysis/utils/: CMakeLists.txt
log_analysis_web_backend/log_analysis/utils/src/: logger.cpp  utils.cpp
log_analysis_web_backend/sql/: data.sql  tables.sql
(+63 files in other folders)
